refactor: change package structure

--- a/examples/david-rumsey-map-collection.ipynb
+++ b/examples/david-rumsey-map-collection.ipynb
@@ -14,21 +14,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import sys\n",
+    "from libquery import DavidRumseyMapCollection\n",
     "\n",
-    "sys.path.append('../')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from libquery.queriers.david_rumsey_map_collection import Querier\n",
-    "\n",
-    "querier = Querier(metadata_dir='./metadata',\n",
-    "                  img_dir='./imgs')"
+    "directory = './david-rumsey-map-collection'\n",
+    "querier = DavidRumseyMapCollection(\n",
+    "    metadata_dir=f'{directory}/metadata',\n",
+    "    img_dir=f'{directory}/imgs',\n",
+    ")"
    ]
   },
   {
@@ -54,6 +46,13 @@
    "source": [
     "querier.fetch_image()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
