--- a/examples/gallica.ipynb
+++ b/examples/gallica.ipynb
@@ -14,21 +14,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import sys\n",
+    "from libquery import Gallica\n",
     "\n",
-    "sys.path.append('../')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from libquery.queriers.gallica import Querier\n",
-    "\n",
-    "querier = Querier(metadata_path='./metadata',\n",
-    "                  img_dir='./imgs')"
+    "directory = './gallica'\n",
+    "querier = Gallica(\n",
+    "    metadata_dir=f'{directory}/metadata',\n",
+    "    img_dir=f'{directory}/imgs',\n",
+    ")"
    ]
   },
   {
