--- a/examples/internet-archive.ipynb
+++ b/examples/internet-archive.ipynb
@@ -14,23 +14,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import sys\n",
+    "from libquery import InternetArchive\n",
     "\n",
-    "sys.path.append('../')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from libquery.queriers.internet_archive import Querier\n",
-    "\n",
-    "querier = Querier(\n",
-    "    metadata_path='./metadata.jsonl',\n",
-    "    download_dir='./downloads',\n",
-    "    img_dir='./imgs',\n",
+    "directory = './internet-archive'\n",
+    "querier = InternetArchive(\n",
+    "    metadata_dir=f'{directory}/metadata',\n",
+    "    download_dir=f'{directory}/downloads',\n",
+    "    img_dir=f'{directory}/imgs',\n",
     ")"
    ]
   },
@@ -56,6 +46,13 @@
    "source": [
     "querier.fetch_image()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
