--- a/examples/library-of-congress.ipynb
+++ b/examples/library-of-congress.ipynb
@@ -14,22 +14,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import sys\n",
+    "from libquery import LibraryOfCongress\n",
     "\n",
-    "sys.path.append('../')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from libquery.queriers.library_of_congress import Querier\n",
-    "\n",
-    "querier = Querier(\n",
-    "    metadata_path='./metadata.jsonl',\n",
-    "    img_dir='./imgs',\n",
+    "directory = './library-of-congress'\n",
+    "querier = LibraryOfCongress(\n",
+    "    metadata_path=f'{directory}/metadata.jsonl',\n",
+    "    img_dir=f'{directory}/imgs',\n",
     ")"
    ]
   },
