refactor(examples): change download directory

--- a/examples/gallica.ipynb
+++ b/examples/gallica.ipynb
@@ -16,7 +16,7 @@
    "source": [
     "from libquery import Gallica\n",
     "\n",
-    "directory = './gallica'\n",
+    "directory = './output/gallica'\n",
     "querier = Gallica(\n",
     "    metadata_dir=f'{directory}/metadata',\n",
     "    img_dir=f'{directory}/imgs',\n",
