--- a/examples/internet-archive.ipynb
+++ b/examples/internet-archive.ipynb
@@ -16,7 +16,7 @@
    "source": [
     "from libquery import InternetArchive\n",
     "\n",
-    "directory = './internet-archive'\n",
+    "directory = './output/internet-archive'\n",
     "querier = InternetArchive(\n",
     "    metadata_dir=f'{directory}/metadata',\n",
     "    download_dir=f'{directory}/downloads',\n",
