--- a/examples/library-of-congress.ipynb
+++ b/examples/library-of-congress.ipynb
@@ -16,7 +16,7 @@
    "source": [
     "from libquery import LibraryOfCongress\n",
     "\n",
-    "directory = './library-of-congress'\n",
+    "directory = './output/library-of-congress'\n",
     "querier = LibraryOfCongress(\n",
     "    metadata_path=f'{directory}/metadata.jsonl',\n",
     "    img_dir=f'{directory}/imgs',\n",
