chore(examples): change directory

--- a/examples/library-of-congress.ipynb
+++ b/examples/library-of-congress.ipynb
@@ -18,7 +18,7 @@
     "\n",
     "directory = './output/library-of-congress'\n",
     "querier = LibraryOfCongress(\n",
-    "    metadata_path=f'{directory}/metadata.jsonl',\n",
+    "    metadata_path=f'{directory}/metadata/metadata.jsonl',\n",
     "    img_dir=f'{directory}/imgs',\n",
     ")"
    ]
