feat: use black for linting

--- a/examples/david-rumsey-map-collection.ipynb
+++ b/examples/david-rumsey-map-collection.ipynb
@@ -16,10 +16,10 @@
    "source": [
     "from libquery import DavidRumseyMapCollection\n",
     "\n",
-    "directory = './output/david-rumsey-map-collection'\n",
+    "directory = \"./output/david-rumsey-map-collection\"\n",
     "querier = DavidRumseyMapCollection(\n",
-    "    metadata_dir=f'{directory}/metadata',\n",
-    "    img_dir=f'{directory}/imgs',\n",
+    "    metadata_dir=f\"{directory}/metadata\",\n",
+    "    img_dir=f\"{directory}/imgs\",\n",
     ")"
    ]
   },
@@ -29,10 +29,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "base_url = 'https://www.davidrumsey.com/luna/servlet/as/search?'\n",
+    "base_url = \"https://www.davidrumsey.com/luna/servlet/as/search?\"\n",
     "queries = [\n",
-    "    f'{base_url}q=type=chart',\n",
-    "    f'{base_url}q=type=diagram',\n",
+    "    f\"{base_url}q=type=chart\",\n",
+    "    f\"{base_url}q=type=diagram\",\n",
     "]\n",
     "# Note: querying 1 image's metadata takes ~2s\n",
     "querier.fetch_metadata(queries=queries)"
@@ -46,13 +46,6 @@
    "source": [
     "querier.fetch_image()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
