--- a/examples/gallica.ipynb
+++ b/examples/gallica.ipynb
@@ -16,10 +16,10 @@
    "source": [
     "from libquery import Gallica\n",
     "\n",
-    "directory = './output/gallica'\n",
+    "directory = \"./output/gallica\"\n",
     "querier = Gallica(\n",
-    "    metadata_dir=f'{directory}/metadata',\n",
-    "    img_dir=f'{directory}/imgs',\n",
+    "    metadata_dir=f\"{directory}/metadata\",\n",
+    "    img_dir=f\"{directory}/imgs\",\n",
     ")"
    ]
   },
@@ -29,10 +29,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "base_url = 'https://gallica.bnf.fr/SRU?operation=searchRetrieve&version=1.2&maximumRecords={maximumRecords}&startRecord={startRecord}'\n",
+    "base_url = \"https://gallica.bnf.fr/SRU?operation=searchRetrieve&version=1.2&maximumRecords={maximumRecords}&startRecord={startRecord}\"\n",
     "queries = [\n",
-    "    f'{base_url}&query=dc.title all %22cartes figurative%22',\n",
-    "    f'{base_url}&query=dc.title all %22tableau graphique%22',\n",
+    "    f\"{base_url}&query=dc.title all %22cartes figurative%22\",\n",
+    "    f\"{base_url}&query=dc.title all %22tableau graphique%22\",\n",
     "]\n",
     "querier.fetch_metadata(queries=queries)"
    ]
