--- a/examples/internet-archive.ipynb
+++ b/examples/internet-archive.ipynb
@@ -16,11 +16,11 @@
    "source": [
     "from libquery import InternetArchive\n",
     "\n",
-    "directory = './output/internet-archive'\n",
+    "directory = \"./output/internet-archive\"\n",
     "querier = InternetArchive(\n",
-    "    metadata_dir=f'{directory}/metadata',\n",
-    "    download_dir=f'{directory}/downloads',\n",
-    "    img_dir=f'{directory}/imgs',\n",
+    "    metadata_dir=f\"{directory}/metadata\",\n",
+    "    download_dir=f\"{directory}/downloads\",\n",
+    "    img_dir=f\"{directory}/imgs\",\n",
     ")"
    ]
   },
@@ -32,8 +32,8 @@
    "source": [
     "# Note: querying 1 image's metadata takes ~1s\n",
     "queries = [\n",
-    "    'creator:(Snow, John) AND -collection:(david-rumsey-map-collection) AND date:[1800-01-01 TO 1950-12-31]',\n",
-    "    'creator:(Cheysson, Émile) AND -collection:(david-rumsey-map-collection) AND date:[0001-01-01 TO 1990-12-31]',\n",
+    "    \"creator:(Snow, John) AND -collection:(david-rumsey-map-collection) AND date:[1800-01-01 TO 1950-12-31]\",\n",
+    "    \"creator:(Cheysson, Émile) AND -collection:(david-rumsey-map-collection) AND date:[0001-01-01 TO 1990-12-31]\",\n",
     "]\n",
     "querier.fetch_metadata(queries=queries)"
    ]
@@ -46,13 +46,6 @@
    "source": [
     "querier.fetch_image()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
