--- a/examples/library-of-congress.ipynb
+++ b/examples/library-of-congress.ipynb
@@ -16,10 +16,10 @@
    "source": [
     "from libquery import LibraryOfCongress\n",
     "\n",
-    "directory = './output/library-of-congress'\n",
+    "directory = \"./output/library-of-congress\"\n",
     "querier = LibraryOfCongress(\n",
-    "    metadata_path=f'{directory}/metadata/metadata.jsonl',\n",
-    "    img_dir=f'{directory}/imgs',\n",
+    "    metadata_path=f\"{directory}/metadata/metadata.jsonl\",\n",
+    "    img_dir=f\"{directory}/imgs\",\n",
     ")"
    ]
   },
@@ -29,10 +29,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "base_url = 'https://www.loc.gov'\n",
+    "base_url = \"https://www.loc.gov\"\n",
     "queries = [\n",
-    "    f'{base_url}/photos/?fo=json&fa=online-format:image&q=chart',\n",
-    "    f'{base_url}/photos/?fo=json&fa=online-format:image&q=diagram',\n",
+    "    f\"{base_url}/photos/?fo=json&fa=online-format:image&q=chart\",\n",
+    "    f\"{base_url}/photos/?fo=json&fa=online-format:image&q=diagram\",\n",
     "]\n",
     "# Note: querying 1 image's metadata takes ~6s\n",
     "querier.fetch_metadata(queries=queries)"
